couldnt quite fix all of the remote control positioning but whatevs ig. didnt touch the CORS issue yet. The TV is transparent now though, so stuff can be rendered behind it easier than in front. easy to switch tho. also toggling stuff was fixed - i had been using useEffect wrong and that is fixed now

--- a/src/index.css
+++ b/src/index.css
@@ -12,15 +12,23 @@ html, body {
   left: -20vw;
   width: 140vw;
   height: 140vh;
-  background: url('./media/backdrop.avif') no-repeat center center;
+  background: url('./media/backdrop-transparent.png') no-repeat center center;
   background-size: cover;
   transition: transform 0.1s ease-out, background-size 0.1s ease-out;
 }
 
 .remote {
   position: absolute;
-  /* top: -90vh;
-  right: -10vw; */
-  top: 0;
-  left: 0;
+  bottom: -10vh;
+  right: -1vw;
+  transform: rotate(-0.05turn);
+  /* height: 400px; */
+  /* max-height: 30vh; */
+  /* max-height: 40%; */
+  /* width: auto; */
+  /* scale: 40vh; */
+  /* object-fit: contain;
+  display: block;
+  max-width: 100%;
+  max-height: 100%; */
 }
